Parallel GC fails fast when per-thread task log overflows

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b165
    • Verified

        gc/parallel/TestPrintGCDetailsVerbose.java crashes on Xeon machines:
        linux: Intel Xeon 1600 MHz, 272 cores, 110G, Linux / Oracle Linux 7.3, x86_64
        solaris: Intel x86 1300 MHz, 256 cores, 112G, Solaris / Solaris 11, i86pc

        With -XX:UseAVX=3

        (could be somehow related to JDK-7180571)

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/scratch/workspace/9-2-build-linux-amd64-phase2/jdk9/6180/hotspot/src/share/vm/gc/parallel/gcTaskThread.cpp:58), pid=113119, tid=113162
        # guarantee(index < GCTaskTimeStampEntries) failed: increase GCTaskTimeStampEntries
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0+160) (fastdebug build 9-ea+160)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 9-ea+160, mixed mode, tiered, compressed oops, parallel gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I" (or dumping to /export/home/aginfra/sandbox/results/workDir/gc/parallel/TestPrintGCDetailsVerbose/core.113119)
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -Dtest.src=/export/home/aginfra/CommonData/j2se_jdk/hotspot/test/gc/parallel -Dtest.src.path=/export/home/aginfra/CommonData/j2se_jdk/hotspot/test/gc/parallel -Dtest.classes=/export/home/aginfra/sandbox/results/workDir/classes/45/gc/parallel -Dtest.class.path=/export/home/aginfra/sandbox/results/workDir/classes/45/gc/parallel -Dtest.vm.opts= -Dtest.tool.vm.opts= -Dtest.compiler.opts= -Dtest.java.opts=-Xmixed -server -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+UseNUMA -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -XX:+IgnoreUnrecognizedVMOptions -XX:UseAVX=3 -Dtest.jdk=/export/home/aginfra/CommonData/TEST_JAVA_HOME -Dcompile.jdk=/export/home/aginfra/CommonData/TEST_JAVA_HOME -Dtest.timeout.factor=16.0 -Dtest.modules=java.base/jdk.internal.misc -Dtest.nativepath=/export/home/aginfra/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED --add-modules=java.base --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -Xmixed -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:+UseNUMA -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -XX:+IgnoreUnrecognizedVMOptions -XX:UseAVX=3 -Djava.library.path=/export/home/aginfra/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED -Xmx50m -XX:+UseParallelGC -Xlog:gc*=trace com.sun.javatest.regtest.agent.MainWrapper /export/home/aginfra/sandbox/results/workDir/gc/parallel/TestPrintGCDetailsVerbose.d/main.1.jta

        Host: scaab274.us.oracle.com, Intel(R) Xeon Phi(TM) CPU 7250 @ 1.40GHz, 272 cores, 109G, Oracle Linux Server release 7.3
        Time: Sat Apr 1 01:41:43 2017 PDT elapsed time: 25 seconds (0d 0h 0m 25s)

        --------------- T H R E A D ---------------

        Current thread (0x00007f46cc03d800): GCTaskThread "ParGC Thread#1" [stack: 0x00007f46d148e000,0x00007f46d158e000] [id=113162]

        Stack: [0x00007f46d148e000,0x00007f46d158e000], sp=0x00007f46d158ca50, free space=1018k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x16c9542] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162;; VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162
        V [libjvm.so+0x16ca2cf] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f;; VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
        V [libjvm.so+0xaa1a2d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd;; report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
        V [libjvm.so+0xcde379] GCTaskThread::time_stamp_at(unsigned int)+0x69;; GCTaskThread::time_stamp_at(unsigned int)+0x69
        V [libjvm.so+0xcdea18] GCTaskThread::run()+0x1e8;; GCTaskThread::run()+0x1e8
        V [libjvm.so+0x137e922] thread_native_entry(Thread*)+0x112;; thread_native_entry(Thread*)+0x112

              Assignee:
              Thomas Schatzl
              Reporter:
              Dmitry Fazunenko (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: